# bandwidth-monitor

./: .gitignore  LICENSE.txt  README.rst  bandwidth-monitor.code-workspace  pyproject.toml  requirements.txt  setup.cfg
src/app/: __init__.py  __main__.py
src/bandwidth_monitor/: __init__.py  __main__.py  main.py
src/bandwidth_monitoring/: __init__.py  __main__.py
