[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Maximilian Burszley <mburszley@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
matplotlib = "^3.3.2"
speedtest-cli = "^2.1.2"
pandas = "^1.1.3"
schedule = "^0.6.0"

[tool.poetry.dev-dependencies]
ipython = "^7.18.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
