; https://setuptools.readthedocs.io/en/stable/userguide/declarative_config.html#metadata
; https://packaging.python.org/guides/distributing-packages-using-setuptools/
[metadata]
name = bandwidth-monitor
version = attr: src.bandwidth_monitor.__version__
url = https://github.com/mburszley/bandwidth-monitor
author = Maximilian Burszley
author_email = mburszley@gmail.com
license = MIT
license_file = LICENSE.txt
description = A wrapper for speedtest.net to get time-series data on local bandwidth availability.
long_description = file: README.rst
classifiers =
	Development Status :: 2 - Pre-Alpha
	Environment :: Console
	Intended Audience :: Developers
	License :: OSI Approved
	License :: OSI Approved :: MIT License
	Natural Language :: English
	Operating System :: OS Independent
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3 :: Only
	Programming Language :: Python :: Implementation
	Programming Language :: Python :: Implementation :: CPython
	Topic :: System :: Networking
	Topic :: System :: Networking :: Monitoring
	Typing :: Typed


[options]
zip_safe = True
include_package_data = True
package_dir =
	= src
packages = find:
install_requires =
	schedule ~=0.6.0
	speedtest-cli ~=2.1.0
python_requires = >=3.6.0

[options.packages.find]
where = src

; https://flake8.pycqa.org/en/stable/user/options.html
[flake8]
use-flake8-tabs = true
blank-lines-indent = never
max-doc-length = 80
max-line-length = 100
max-complexity = 10

; https://github.com/google/yapf/tree/v0.30.0#formatting-style
[yapf]
use_tabs = true
column_limit = 100
